--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,18 @@
 <h1><%= @restaurant.name %></h1>
 
-<h2><%= @restaurant.address %></h2>
-<p><%= @restaurant.category %></p>
+<h2>Adress: <%= @restaurant.address %></h2>
+<p>category: <%= @restaurant.category %></p>
+
+<% if @restaurant.reviews.any? %>
+  <p>reviews:</p>
+  <ul>
+    <% @restaurant.reviews.each do |review| %>
+      <%= review.content %> - <%= review.rating %>
+    <% end %>
+  </ul>
+<% end %>
+
+
+<%= link_to "Add a review",  new_restaurant_review_path(@restaurant) %>
 
 <%= link_to "Back to Home",  restaurants_path  %>
