--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,7 +12,16 @@
   </ul>
 <% end %>
 
+<p>Add review</p>
 
-<%= link_to "Add a review",  new_restaurant_review_path(@restaurant) %>
+<%= simple_form_for [ @restaurant, @review ] do |f| %>
+  <%= f.input :content %>
+  <%= f.input :rating, as: :radio_buttons, collection: Review::RATING %>
+  <%= f.submit %>
+<% end %>
+
+
+
+<%# <%= link_to "Add a review",  new_restaurant_review_path(@restaurant) %>
 
 <%= link_to "Back to Home",  restaurants_path  %>
